--- a/templates/configure_active_directory.erb
+++ b/templates/configure_active_directory.erb
@@ -106,13 +106,13 @@ export KRB5CCNAME=$(umask 0077; mktemp -q winbind_cache.XXXXXXXX)
 
 if [ "$action" = "join" ]; then
     if [ "${target_ou}" != "" ]; then
-        ou_parameter="createcomputer='${target_ou}'"
+        ou_parameter="createcomputer=${target_ou}"
     else
-        ou_parameter=''
+        ou_parameter=""
     fi
 
     logger -st $PROG "Joining AD domain" >&2
-    $NET ads $action -U "${winbind_acct}%${password}" ${ou_parameter} \
+    $NET ads $action -U "${winbind_acct}%${password}" "${ou_parameter}" \
 	| grep Joined && success=true || success=false
 
 if [ $success = "false" ]; then
@@ -132,13 +132,16 @@ for attempt in $(seq 1 $max_attempts); do
         expect eof"
     klist -c $KRB5CCNAME &> /dev/null && break
 done
-
+<% if @verify_query_users -%>
 if [ $(wbinfo -u|wc -l) != 0 ]; then
 	success=true
 else
 	echo "ERROR: return user list from AD is empty" >&2
 	success=false
 fi
+<% else -%>
+success=true
+<% end -%>
 
 # get rid of cred cache
 kdestroy -c $KRB5CCNAME &> /dev/null
